--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ fcddaf
     <div class="row">
       <div class="col-2 mx-2 d-block">
         <div class="row mt-4 mx-auto d-block text-center">
-          <img src="assets/provemap.png" class="img-fluid mb-3" alt="Profile picture">
+          <img src="./assets/provemap.png" class="img-fluid mb-3" alt="Profile picture">
           <p class="lead">Mapping Provenance</p>
           <!--
           <p class="font-weight-light">Depertment of Engineering<br> <a
