--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@ fcddaf
 			  position: relative;
 			  border-radius: .5rem .5rem 0;
 			  transform: rotate(45deg);
+			  opacity: 0.7;
 			  border: 1px solid #FFFFFF`	
 
 		  var rainbow = new Rainbow(); 
@@ -157,6 +158,8 @@ fcddaf
 		  var baselayer = L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=' + mapboxAccessToken, {
 			id: 'mapbox/light-v9',
 			//attribution: ...,
+			maxZoom: 12,
+		    minZoom: 3,
 			tileSize: 512,
 			zoomOffset: -1
 		  }).addTo(map);
@@ -432,7 +435,7 @@ fcddaf
 					Reset
 				</button>
 			</div>
-        <div id="demoA"></div>
+        <div id="demoA" style="font: 10px Arial, Helvetica, sans-serif; vertical-align: text-top;"></div>
         </div>
         <div class="row mx-auto d-block" style="height:500px">
         </div>
